# transfermaker

./: .gitignore  README.md  launcher.py  pyproject.toml  run-windows.bat
resources/: .kobold_version  config.json  config.kcpps
src/: gui.py  image_processor.py  mrf_quantize.py  thinchecker.py
